--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,32 @@
+aiohttp==3.8.3
+aiosignal==1.3.1
+async-timeout==4.0.2
+attrs==22.1.0
+autopep8==2.0.0
+beautifulsoup4==4.8.1
+bs4==0.0.1
+certifi==2022.9.24
+chardet==3.0.4
+charset-normalizer==2.1.1
 click==8.1.3
 Flask==2.2.2
 Flask-SQLAlchemy==3.0.2
+frozenlist==1.3.3
 greenlet==2.0.1
+gunicorn==20.1.0
+idna==2.8
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+multidict==6.0.2
+mutagen==1.46.0
 psycopg2==2.9.5
+pycodestyle==2.10.0
 python-dotenv==0.21.0
+requests==2.22.0
+soupsieve==2.3.2.post1
 SQLAlchemy==1.4.44
+tomli==2.0.1
+urllib3==1.25.11
 Werkzeug==2.2.2
+yarl==1.8.1
